fix(mg-modal): overflow-y crop shadow
#473 CORE-3185

--- a/packages/styles/scss/components/mg-modal.scss
+++ b/packages/styles/scss/components/mg-modal.scss
@@ -55,6 +55,8 @@
   }
 
   &__content {
+    padding: 0.5rem;
+    margin: -0.5rem;
     overflow-y: auto;
 
     &::slotted(*) {
